test-data/elab/parse-error.snapshot
exit status: 0

stdout = """
#error : #error
"""

stderr = """
error: expected one of "(", "@", "BinInt", "DecInt", "HexInt", "Ident", "_", "false", "true" or "{"
  ┌─ test-data/elab/parse-error.pion:1:11
  │
1 │ #check fun;
  │           ^
"""
